Fix text overflow on the member name hover element

--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -131,7 +131,7 @@
     padding: 5px;
     background-color: #ecfaff;
     border-radius: 3px;
-    width: 30px;
+    width: auto;
     font-size: 0.7rem;
     color: $text-gray;
     left: 5px;
